Add vrap+pos+int to docs

--- a/docs/source/refs.bib
+++ b/docs/source/refs.bib
@@ -53,3 +53,67 @@
     month = "2",
     year = "2023"
 }
+@article{Anastasiou:2003ds,
+    author = "Anastasiou, Charalampos and Dixon, Lance J. and Melnikov, Kirill and Petriello, Frank",
+    title = "{High precision QCD at hadron colliders: Electroweak gauge boson rapidity distributions at NNLO}",
+    eprint = "hep-ph/0312266",
+    archivePrefix = "arXiv",
+    reportNumber = "SLAC-PUB-10288, UH-511-1042-03",
+    doi = "10.1103/PhysRevD.69.094008",
+    journal = "Phys. Rev. D",
+    volume = "69",
+    pages = "094008",
+    year = "2004"
+}
+@misc{Candido:2023ujx,
+    author = "Candido, Alessandro and Forte, Stefano and Giani, Tommaso and Hekhorn, Felix",
+    title = "{On the positivity of MSbar parton distributions}",
+    eprint = "2308.00025",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "TIF-UNIMI-2023-21",
+    month = "7",
+    year = "2023"
+}
+@article{Candido:2020yat,
+    author = "Candido, Alessandro and Forte, Stefano and Hekhorn, Felix",
+    title = "{Can $ \overline{\mathrm{MS}} $ parton distributions be negative?}",
+    eprint = "2006.07377",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "TIF-UNIMI-2020-9",
+    doi = "10.1007/JHEP11(2020)129",
+    journal = "JHEP",
+    volume = "11",
+    pages = "129",
+    year = "2020"
+}
+@article{Collins:2021vke,
+    author = "Collins, John and Rogers, Ted C. and Sato, Nobuo",
+    title = "{Positivity and renormalization of parton densities}",
+    eprint = "2111.01170",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "JLAB-THY-21-3507",
+    doi = "10.1103/PhysRevD.105.076010",
+    journal = "Phys. Rev. D",
+    volume = "105",
+    number = "7",
+    pages = "076010",
+    year = "2022"
+}
+@article{NNPDF:2021njg,
+    author = "Ball, Richard D. and others",
+    collaboration = "NNPDF",
+    title = "{The path to proton structure at 1\% accuracy}",
+    eprint = "2109.02653",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "Edinburgh 2021/12, Nikhef-2021-013, TIF-UNIMI-2021-11",
+    doi = "10.1140/epjc/s10052-022-10328-7",
+    journal = "Eur. Phys. J. C",
+    volume = "82",
+    number = "5",
+    pages = "428",
+    year = "2022"
+}
