add a nice message on what to do after the runcard is created, tested compatibility with nnlojet-run

--- a/docs/source/refs.bib
+++ b/docs/source/refs.bib
@@ -117,3 +117,9 @@
     pages = "428",
     year = "2022"
 }
+@misc{nnlojet,
+    author = "NNLOJET",
+    title = "{NNLOJET}",
+    note = "{in preparation}",
+    year = "2025"
+}
